--- a/feature engineering.ipynb
+++ b/feature engineering.ipynb
@@ -7233,7 +7233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "2b57309f",
    "metadata": {},
    "outputs": [],
@@ -7531,6 +7531,44 @@
    "source": [
     "###  BertWordPieceTokenizer"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7390b4ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'SentencePieceTokenizer' from 'tokenizers' (/Users/sella_mac/opt/anaconda3/envs/pytorch_3_8_11/lib/python3.8/site-packages/tokenizers/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtokenizers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Tokenizer, SentencePieceTokenizer, BertWordPieceTokenizer\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'SentencePieceTokenizer' from 'tokenizers' (/Users/sella_mac/opt/anaconda3/envs/pytorch_3_8_11/lib/python3.8/site-packages/tokenizers/__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from tokenizers import Tokenizer, SentencePieceTokenizer, BertWordPieceTokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f64cd68",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b59af7e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
