--- a/customer_clustering/data_prepocess.ipynb
+++ b/customer_clustering/data_prepocess.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f5f275c6",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "9ea75807",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "4  12/1/10 8:26       3.39     17850.0  United Kingdom  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7558d998",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8dabba4a",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,241 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60a8eee2",
+   "id": "489d79f4",
+   "metadata": {},
+   "source": [
+    "duplicate row 삭제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "193ed206",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>517</th>\n",
+       "      <td>536409</td>\n",
+       "      <td>21866</td>\n",
+       "      <td>UNION JACK FLAG LUGGAGE TAG</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12/1/10 11:45</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>17908.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>527</th>\n",
+       "      <td>536409</td>\n",
+       "      <td>22866</td>\n",
+       "      <td>HAND WARMER SCOTTY DOG DESIGN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12/1/10 11:45</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>17908.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>537</th>\n",
+       "      <td>536409</td>\n",
+       "      <td>22900</td>\n",
+       "      <td>SET 2 TEA TOWELS I LOVE LONDON</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12/1/10 11:45</td>\n",
+       "      <td>2.95</td>\n",
+       "      <td>17908.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>539</th>\n",
+       "      <td>536409</td>\n",
+       "      <td>22111</td>\n",
+       "      <td>SCOTTIE DOG HOT WATER BOTTLE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12/1/10 11:45</td>\n",
+       "      <td>4.95</td>\n",
+       "      <td>17908.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>555</th>\n",
+       "      <td>536412</td>\n",
+       "      <td>22327</td>\n",
+       "      <td>ROUND SNACK BOXES SET OF 4 SKULLS</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12/1/10 11:49</td>\n",
+       "      <td>2.95</td>\n",
+       "      <td>17920.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541675</th>\n",
+       "      <td>581538</td>\n",
+       "      <td>22068</td>\n",
+       "      <td>BLACK PIRATE TREASURE CHEST</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12/9/11 11:34</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>14446.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541689</th>\n",
+       "      <td>581538</td>\n",
+       "      <td>23318</td>\n",
+       "      <td>BOX OF 6 MINI VINTAGE CRACKERS</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12/9/11 11:34</td>\n",
+       "      <td>2.49</td>\n",
+       "      <td>14446.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541692</th>\n",
+       "      <td>581538</td>\n",
+       "      <td>22992</td>\n",
+       "      <td>REVOLVER WOODEN RULER</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12/9/11 11:34</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>14446.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541699</th>\n",
+       "      <td>581538</td>\n",
+       "      <td>22694</td>\n",
+       "      <td>WICKER STAR</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12/9/11 11:34</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>14446.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541701</th>\n",
+       "      <td>581538</td>\n",
+       "      <td>23343</td>\n",
+       "      <td>JUMBO BAG VINTAGE CHRISTMAS</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12/9/11 11:34</td>\n",
+       "      <td>2.08</td>\n",
+       "      <td>14446.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5268 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       InvoiceNo StockCode                        Description  Quantity  \\\n",
+       "517       536409     21866        UNION JACK FLAG LUGGAGE TAG         1   \n",
+       "527       536409     22866      HAND WARMER SCOTTY DOG DESIGN         1   \n",
+       "537       536409     22900    SET 2 TEA TOWELS I LOVE LONDON          1   \n",
+       "539       536409     22111       SCOTTIE DOG HOT WATER BOTTLE         1   \n",
+       "555       536412     22327  ROUND SNACK BOXES SET OF 4 SKULLS         1   \n",
+       "...          ...       ...                                ...       ...   \n",
+       "541675    581538     22068        BLACK PIRATE TREASURE CHEST         1   \n",
+       "541689    581538     23318     BOX OF 6 MINI VINTAGE CRACKERS         1   \n",
+       "541692    581538     22992             REVOLVER WOODEN RULER          1   \n",
+       "541699    581538     22694                       WICKER STAR          1   \n",
+       "541701    581538     23343       JUMBO BAG VINTAGE CHRISTMAS          1   \n",
+       "\n",
+       "          InvoiceDate  UnitPrice  CustomerID         Country  \n",
+       "517     12/1/10 11:45       1.25     17908.0  United Kingdom  \n",
+       "527     12/1/10 11:45       2.10     17908.0  United Kingdom  \n",
+       "537     12/1/10 11:45       2.95     17908.0  United Kingdom  \n",
+       "539     12/1/10 11:45       4.95     17908.0  United Kingdom  \n",
+       "555     12/1/10 11:49       2.95     17920.0  United Kingdom  \n",
+       "...               ...        ...         ...             ...  \n",
+       "541675  12/9/11 11:34       0.39     14446.0  United Kingdom  \n",
+       "541689  12/9/11 11:34       2.49     14446.0  United Kingdom  \n",
+       "541692  12/9/11 11:34       1.95     14446.0  United Kingdom  \n",
+       "541699  12/9/11 11:34       2.10     14446.0  United Kingdom  \n",
+       "541701  12/9/11 11:34       2.08     14446.0  United Kingdom  \n",
+       "\n",
+       "[5268 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duplicate_rows = retail_df[retail_df.duplicated()]\n",
+    "duplicate_rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "83f14ee2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(536641, 8)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retail_df = retail_df.drop_duplicates()\n",
+    "retail_df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c186c270",
    "metadata": {},
    "source": [
     "InvoiceDate Datetime으로 형변환"
@@ -223,22 +457,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "83cbfee4",
+   "execution_count": null,
+   "id": "d6b5db3e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "date_format = \"%m/%d/%y %H:%M\""
+    "# date_format = \"%m/%d/%y %H:%M\"\n",
+    "# retail_df['InvoiceDate'] = retail_df['InvoiceDate'].apply(lambda x : datetime.datetime.strptime(x, date_format))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "8b64fa65",
+   "execution_count": 16,
+   "id": "d917004d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "retail_df['InvoiceDate'] = retail_df['InvoiceDate'].apply(lambda x : datetime.datetime.strptime(x, date_format))"
+    "retail_df['InvoiceDate'] = pd.to_datetime(retail_df['InvoiceDate'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2942ee12",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>InvoceDate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>85123A</td>\n",
+       "      <td>WHITE HANGING HEART T-LIGHT HOLDER</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>71053</td>\n",
+       "      <td>WHITE METAL LANTERN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>84406B</td>\n",
+       "      <td>CREAM CUPID HEARTS COAT HANGER</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029G</td>\n",
+       "      <td>KNITTED UNION FLAG HOT WATER BOTTLE</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029E</td>\n",
+       "      <td>RED WOOLLY HOTTIE WHITE HEART.</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  InvoiceNo StockCode                          Description  Quantity  \\\n",
+       "0    536365    85123A   WHITE HANGING HEART T-LIGHT HOLDER         6   \n",
+       "1    536365     71053                  WHITE METAL LANTERN         6   \n",
+       "2    536365    84406B       CREAM CUPID HEARTS COAT HANGER         8   \n",
+       "3    536365    84029G  KNITTED UNION FLAG HOT WATER BOTTLE         6   \n",
+       "4    536365    84029E       RED WOOLLY HOTTIE WHITE HEART.         6   \n",
+       "\n",
+       "          InvoiceDate  UnitPrice  CustomerID         Country  \\\n",
+       "0 2010-12-01 08:26:00       2.55     17850.0  United Kingdom   \n",
+       "1 2010-12-01 08:26:00       3.39     17850.0  United Kingdom   \n",
+       "2 2010-12-01 08:26:00       2.75     17850.0  United Kingdom   \n",
+       "3 2010-12-01 08:26:00       3.39     17850.0  United Kingdom   \n",
+       "4 2010-12-01 08:26:00       3.39     17850.0  United Kingdom   \n",
+       "\n",
+       "           InvoceDate  \n",
+       "0 2010-12-01 08:26:00  \n",
+       "1 2010-12-01 08:26:00  \n",
+       "2 2010-12-01 08:26:00  \n",
+       "3 2010-12-01 08:26:00  \n",
+       "4 2010-12-01 08:26:00  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retail_df.head(5)"
    ]
   },
   {
